<resources>
    <string name="app_name">Forever Flight Logs</string>
    <string name="username">Phone Number</string>
    <string name="label_phone">Phone number</string>
    <string name="label_name">Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="create_new_flight">Create New Flight</string>
    <string name="show_all_flights">Show All Flights</string>
    <string name="button_start_flight">Start Flight</string>
    <string name="button_start_segment">Start Segment</string>
    <string name="button_end_segment">End Segment</string>
    <string name="button_new_segment">New Segment</string>
    <string name="button_end_flight">End Flight</string>
    <string name="button_add_remarks">Add Remarks</string>
    <string name="button_continue_flight">Continue Flight</string>
    <string name="button_save">Save</string>
    <string name="button_save_log">Save Log</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="label_PilotInCommand">Pilot In Command</string>
    <string name="label_dualHours">Dual Hours</string>
    <string name="label_simInstruments">Simulated Instruments</string>
    <string name="label_visualFlight">Visual Flight</string>
    <string name="label_instrumentFlight">Instrument Flight</string>
    <string name="label_night">Night</string>
    <string name="segmentList">Segment List</string>
    <string name="duration">00.00</string>
    <string name="startTime">2017-04-12 16:21:03</string>
    <string name="endTime">2017-04-12 17:21:03</string>
    <string name="label_crossCountry">Cross Country</string>
    <string name="label_solo">Solo</string>
    <string name="label_remarks">Remarks:</string>
    <string name="label_segment_title">Segment</string>
    <string name="label_duration_title">Duration:</string>
    <string name="label_night_title">Night Flight:</string>
    <string name="label_inst_title">Inst Flight:</string>
    <string name="label_vis_flight_title">Vis Flight:</string>
    <string name="label_sim_inst_title">Sim Inst:</string>
    <string name="label_dual_hours_title">Dual Hours:</string>
    <string name="label_pic_title">PIC:</string>
    <string name="label_end_title">End:</string>
    <string name="label_start_title">Start:</string>
    <string name="label_flights_list_to_title">to</string>
    <string name="label_flights_segments_title">No of Segments:</string>
    <string name="label_flights_crosscountry">Cross Country:</string>
    <string name="label_flights_solo">Solo Flight:</string>
    <string name="label_flights_planeNumber">Plane Number:</string>
    <string name="label_flights_synced">Synced:</string>
    <string name="label_flights_inProgress">In Progress:</string>
    <string name="button_createAccount">Create Account</string>
  <string name="logToken">Device Token</string>

</resources>
