<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/createNewFlightButton"
        android:layout_width="221dp"
        android:layout_height="81dp"
        android:layout_marginTop="84dp"
        android:onClick="createNewFlight"
        android:text="@string/create_new_flight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showAllFlightsButton"
        android:layout_width="221dp"
        android:layout_height="81dp"
        android:layout_marginBottom="128dp"
        android:onClick="showAllFlights"
        android:text="@string/show_all_flights"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_continue_flight"
        android:layout_width="216dp"
        android:layout_height="77dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:onClick="continueFlight"
        android:text="@string/button_continue_flight"
        app:layout_constraintBottom_toTopOf="@+id/showAllFlightsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewFlightButton"
        app:layout_constraintVertical_bias="0.041" />
</android.support.constraint.ConstraintLayout>