<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@drawable/background">

    <EditText
      android:id="@+id/phone"
      android:layout_width="wrap_content"
      android:layout_height="46dp"
      android:layout_marginTop="4dp"
      android:ems="10"
      android:hint="@string/label_phone"
      android:inputType="number"
      android:textColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <EditText
      android:id="@+id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/label_name"
      android:inputType="textPersonName"
      android:textColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/phone"/>


    <EditText
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="text|textPassword"
      android:textColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name"/>

    <EditText
      android:id="@+id/confirmPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/confirmPassword"
      android:inputType="textPassword"
      android:textColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"/>


    <Button
      android:id="@+id/btn_createAccount"
      android:textStyle="bold"
      android:layout_width="220dp"
      android:layout_height="53dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:background="@color/white"
      android:onClick="createNewAccount"
      android:text="@string/button_createAccount"
      android:textColor="@color/blue"
      app:layout_constraintBottom_toTopOf="@+id/textView6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.518"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
      app:layout_constraintVertical_bias="0.153"/>

    <Button
      android:id="@+id/login"
      android:textStyle="bold"
      android:layout_width="224dp"
      android:layout_height="41dp"
      android:layout_marginBottom="40dp"
      android:background="@color/white"
      android:onClick="onclickLogin"
      android:text="@string/button_login"
      android:textColor="@color/blue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.506"
      app:layout_constraintStart_toStartOf="parent"
      tools:text="@string/button_login"/>

    <TextView
      android:id="@+id/textView4"
      android:textStyle="bold"
      android:layout_width="241dp"
      android:layout_height="52dp"
      android:layout_marginTop="8dp"
      android:text="@string/button_createAccount"
      android:textAllCaps="false"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Create Account"/>

    <TextView
      android:id="@+id/textView6"
      android:layout_width="258dp"
      android:layout_height="30dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:text="Already have an account? Click to login."
      android:textColor="@color/navy"
      app:layout_constraintBottom_toTopOf="@+id/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.581"
      app:layout_constraintStart_toStartOf="parent"
      tools:text="Already have an account? Click to login."/>

</android.support.constraint.ConstraintLayout>
