<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/flightsCrossCountry"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/flightsSolo"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightsCrossCountry" />

    <TextView
        android:id="@+id/flightsDeparture"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="SLC"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flightsArrival"
        android:layout_width="65dp"
        android:layout_height="39dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="BOI"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="66dp"
        android:layout_height="19dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/label_flights_list_to_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightsDeparture" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="160dp"
        android:layout_height="21dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_flights_start_end_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/flightsDeparture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flightsStartDate"
        android:layout_width="160dp"
        android:layout_height="19dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="Date"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsDeparture"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/flightsStartTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsDeparture"
        app:layout_constraintTop_toBottomOf="@+id/flightsStartDate" />

    <TextView
        android:id="@+id/flightsEndDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsDeparture"
        app:layout_constraintTop_toBottomOf="@+id/flightsStartTime" />

    <TextView
        android:id="@+id/flightsEndTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsDeparture"
        app:layout_constraintTop_toBottomOf="@+id/flightsEndDate" />

    <TextView
        android:id="@+id/flightsNNumber"
        android:layout_width="80dp"
        android:layout_height="21dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_flights_crosscountry"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsStartDate"
        app:layout_constraintTop_toBottomOf="@+id/flightsNNumber" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_flights_solo"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsStartTime"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/flightsRemarks"
        android:layout_width="148dp"
        android:layout_height="39dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/flightsEndTime"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/aLine"
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/flightsStartTime"
        app:srcCompat="@color/gray" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_flights_planeNumber"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>